--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-API_URL=http://localhost:8000/api
+NEXT_PUBLIC_API_URL=http://localhost:8000/api
+NEXT_PUBLIC_GOOGLE_AUTH_CLIENT_ID=default_google_client_id_here
+NEXT_PUBLIC_VAPID_PUBLIC_KEY=your_public_key_here
+VAPID_PRIVATE_KEY=your_private_key_here
