--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_API_URL=http://localhost:8000/api
 NEXT_PUBLIC_GOOGLE_AUTH_CLIENT_ID=409090854563-2i9g3n7mhrm3sfgfcibc68tton219dck.apps.googleusercontent.com
+NEXT_PUBLIC_VAPID_PUBLIC_KEY=BP4_m5rUIMoXLZ-R44RzckRpqFp8mWChujn2MHHEfEpA_I7yhFmbHfwn3dZYHLbJUEQq1imWWfehhfjDsKzqQbE
+VAPID_PRIVATE_KEY=YeLZoCVHnSLASnlRKq7y3F6TcDGbCNYmDAKA_eKWvJg
